<resources>
    <string name="app_name">PoliTyper</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_mail">E-mail</string>
    <string name="prompt_newPassword">New Password</string>
    <string name="prompt_firstName">First name</string>
    <string name="prompt_lastName">Last name</string>
    <string name="prompt_confirmNewPassword">Confirm New Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="be_url">https://wpamprojekt-prod.herokuapp.com</string>
    <string name="news_url">https://newsapi.org/v2/everything</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>